Use Android notifications Add a Pod chooser when launching the App

--- a/assets/error.html
+++ b/assets/error.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href="style.css" type="text/css" rel="stylesheet">   
-    </head>
-    <body>
+<head>
+    <link href="style.css" type="text/css" rel="stylesheet">
+</head>
+<body>
+    <div id="error">
         <h1>Oops !</h1>
-        <p>It seems that Movim is currently unreachable</p>
+
+        <h2>It seems that Movim is currently unreachable</h2>
+
         <p>Please check your connectivity or try again later</p>
-        <img src="logo.svg"/>
-        <br />
-        <a class="button" href="https://pod.movim.eu/">Try again</a>
-    </body>
+
+        <a class="button main" href="index.html">Try again</a>
+    </div>
+</body>
 </html>
