Update the landing page

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,8 +11,11 @@
     </head>
     <body>
         <div id="redirect">
-            <h2>Loading <span></span>…</h2>
             <a class="button main" onclick="API.get();">Choose another Pod</a>
+
+            <div class="spinner">
+                <h2>Loading <span></span>…</h2>
+            </div>
         </div>
         <div id="list">
             <h2>Loading the list…</h2>
